added dagger files, services

--- a/mvp-example/src/main/res/values/strings.xml
+++ b/mvp-example/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MvpTemplateProject</string>
+    <string name="button_some_action_text">Some action</string>
 </resources>
